# quicnet

./: .gitignore  Cargo.toml  LICENSE  gen-certs.sh  test.sh
certs/: gen-certs.sh
certs/cert_1/: RootCA.pem  RootCA.srl  domains_1.txt  localhost.crt  localhost.csr  localhost.key
certs/cert_2/: RootCA.srl  domains_2.txt  localhost.crt  localhost.csr  localhost.key
certs/cert_3/: RootCA.srl  domains_3.txt  localhost.crt  localhost.csr  localhost.key
certs/cert_4/: RootCA.key  RootCA.srl  domains_4.txt  localhost.crt  localhost.csr  localhost.key
certs/cert_5/: RootCA.srl  domains_5.txt  localhost.crt  localhost.csr  localhost.key
data/: config-ddpwuxrmp.toml  config-rehdhssj.toml
src/: lib.rs  server.rs  utils.rs
src/config/: client_auth.rs  domain_name.rs  mod.rs  quic.rs  read_certs.rs  tls.rs
