[package]
name = "quicnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]

dashmap = { version = "5.4.0", features = ["inline"] }
libc = "0.2.147"
quinn = "0.10.2"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.186", features = ["derive"] }

[dependencies.tokio]
version = "1.32.0"
default-features = false
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "io-util",
    "macros",
    "parking_lot",
]

[dependencies.tracing]
version = "0.1.37"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "fmt", "env-filter"]
