[package]
name = "quicnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
config = "0.13.3"

dashmap = { version = "5.4.0", features = ["inline"] }
libc = "0.2.147"
quinn = "0.10.2"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
serde = { version = "1.0.186", features = ["derive"] }
webpki = { version = "0.22.0", features = ["std"] }

[dependencies.tokio]
version = "1.32.0"
default-features = false
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "io-util",
    "macros",
    "parking_lot",
]

[dependencies.tracing]
version = "0.1.37"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "fmt", "env-filter"]
